test/razor.test.views/sections/error/sectionAlreadyRendered.raz
@section Headers{
    <h1>Headers</h1>
}

@Html.section("Headers")
@Html.section("Headers")